added jekyll config

--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Tim Kreitner</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Tim!</h1>
-				<p>...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:tim@kreitner.xyz">email</a></li>
-        		<li><a href="https://github.com/tabassco">github.com/tabassco</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Tim Kreitner
+---
+<div class="blurb">
+	<h1>Hi there, I'm Tim!</h1>
+	<p>this is a work in progress...</a></p>
+</div><!-- /.blurb -->
