--- a/cv/index.html
+++ b/cv/index.html
@@ -2,7 +2,9 @@
 layout: default
 title: CV
 ---
-<div class="blurb">
+<h1>{{ page.title }}</h1>
+
+<div class="cv">
     <h1>Hi there, I'm Tim!</h1>
     <p>CV incoming</a></p>
-</div><!-- /.blurb -->
+</div><!-- /.cv -->
