--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 ---
-layout: default
-title: Tim Kreitner
+layout: page
+title: Home
 ---
-<div class="blurb">
-	<h1>Hi there, I'm Tim!</h1>
-	<p>this is a work in progress...</a></p>
-</div><!-- /.blurb -->
